--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="BootstrapPractice/about.html">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     </li>
                     <li class="nav-item dropdown">
@@ -47,7 +47,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="BootstrapPractice/contact.html">Contact Us</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
 
 
                 </ul>
