--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="BootstrapPractice/index.html">Home</a>
+                        <a class="nav-link " aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="BootstrapPractice/about.html">About</a>
+                        <a class="nav-link active" href="about.html">About</a>
                     </li>
                     </li>
                     <li class="nav-item dropdown">
@@ -47,7 +47,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="BootstrapPractice/contact.html">Contact Us</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
 
 
                 </ul>
